--- a/eventit_src/src/Results.css
+++ b/eventit_src/src/Results.css
@@ -3,6 +3,7 @@ li {
     align-items: center;
     text-align: center;
     background-color: lavender;
+    font-family: fantasy;
 }
 
 img {
@@ -80,11 +81,10 @@ ul {
     border-right: 1px solid black;
 }
 
-
-
 .result-header {
     height: 25px;
     border-top: 1px solid black;
+    padding-top: 5px;
 }
 
 #name-header {
